@@ -49,6 +49,7 @@ extra_scanners = MooseXTypesCombine
 [Prereqs::AuthorDeps]   ; add authordeps as develop/requires
 ; authordep Perl::PrereqScanner::Scanner::MooseXTypesCombine
 ; authordep Pod::Weaver::Section::Contributors
+; authordep Test::LWP::MockSocket::http
 
 ; build system
 [ExtraTests]
