@@ -2,6 +2,8 @@ Revision history for perl module Remedi
 
 {{$NEXT}}
 
+    - SRU Errors are captured with a error message
+
 0.054     2014-06-29 16:26:54+02:00 Europe/Berlin
 
     - log level set for Remedi affects now the creation of the footer too   
